discussion/kv_engine/125919/125919_rev7_discussion.txt
======================================================================================================================
DESCRIPTION:

Change compaction to use the PiTR configuration

Change-Id: I0f1b686ff8190d087bba3630b371ca346985a35c

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-04-20 09:33:23.000000000
Message: 
Uploaded patch set 7.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-20 09:44:35.000000000
Message: 
Patch Set 7: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3224/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3224/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3286/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11075/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11075/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27620/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\couch-kvstore\couch-kvstore.cc(1097): error C2660: "cb::couchstore::compact": function does not take 8 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27620/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1790/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17: error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
                oldest.time_since_epoch().count(),
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/couchstore/include/libcouchstore/couch_db.h:1205:1: note: "compact" declared here
LIBCOUCHSTORE_API
^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/build-kv_engine-clang-tidy/couchstore/include/libcouchstore/visibility.h:15:33: note: expanded from macro "LIBCOUCHSTORE_API"
#      define LIBCOUCHSTORE_API __attribute__((visibility("default")))
                                ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1790/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17:
error: too many arguments to function call, expected 6, have 8 [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1790/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23618/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23618/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2268/ : FAILURE

Compile error at [2020-04-20T09:35:18.886Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1106:17:
error: too many arguments to function call, expected 6, have 8
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2268/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3207/ : FAILURE

Compile error at [2020-04-20T09:43:16.007Z] ../kv_engine/engines/ep/src/couch-kvstore/couch-kvstore.cc:1107:30:
error: too many arguments to function ?couchstore_error_t cb::couchstore::compact(Db&, const char*, couchstore_compact_flags, cb::couchstore::CompactFilterCallback, cb::couchstore::CompactRewriteDocInfoCallback, FileOpsInterface*)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3207/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/309/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
